--- a/Curso7/WebContent/inicio3.html
+++ b/Curso7/WebContent/inicio3.html
@@ -7,7 +7,7 @@
 var xmlHttp = new XMLHttpRequest();
 
 function rellenaCaja()
-{
+{//segundo paramaetro son rutas locales 
 	xmlHttp.onreadystatechange = procesarEventos;
 	xmlHttp.open('GET', 'CargaJSON', true); //indicamos como vamos a enviar los datos, en este caso con el metodo GET al archivo meses.php?num= el valor que le indiquemos en el textbox
 	xmlHttp.send(null);
@@ -21,8 +21,8 @@ function procesarEventos()
   {
       if(xmlHttp.status==200)// y el código de la cabecera http es bueno
           {
-			alert("He recibido " + xmlHttp.responseText);
-			var objetoJson = JSON.parse(xmlHttp.responseText);
+			alert("He recibido " + xmlHttp.responseText); //responseText almacena el body(en este caso string de json)
+			var objetoJson = JSON.parse(xmlHttp.responseText);//una clase  deserializo objeto nombre y edad 
 			alert ("Persona = " + objetoJson.nombre);
 			alert ("Persona = " + objetoJson.edad);
 			document.getElementById("nombre").value = objetoJson.nombre;
